# rust-api

./: .env  Cargo.toml  Dockerfile  db_query.sql  personnummer_validering.js  queries.sql  test.js
src/: main.rs  queries.rs  services.rs
src/models/: api.rs  db.rs
