[package]
name = "ibnrushd-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6.2", features = ["runtime-async-std-native-tls", "postgres", "uuid", "time", "chrono", "macros", "migrate"] }
uuid = {version = "1.2.2", features = ["v4", "macro-diagnostics", "serde"]} 
chrono = {version = "0.4.23", features = ["serde"]}